--- a/modulo-01/d005/index.html
+++ b/modulo-01/d005/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Social</title>
 </head>
 <body>
@@ -10,12 +11,12 @@
 
     <h2>Um pouco sobre mim</h2>
     <br>
-    <img src="/images/gato_massa.png" alt="Foto de um gato">
-    <p>Meu nome é Artnoobbr sou um usuario comum na internet, no momento estou aprendendo HTML e CSS, mas já fiz projetos de bots no discord com python e também fiz mods para o jogo Left for dead 2!</p>
+    <img src="images/gato_massa.png" alt="Foto de um gato">
+    <p>Meu nome é <strong>Artnoobbr</strong> sou um usuario comum na internet, no momento estou aprendendo HTML e CSS, mas já fiz projetos de bots no discord com python e também fiz mods para o jogo Left for dead 2!</p>
 
     <h2>Minhas redes</h2>
     <ul>
-        <li><img src="/images/icone-github.png" alt="github icone"><a href="https://github.com/Artnoobbr" target="_blank" rel="external">Github</a>
+        <li><img src="images/icone-github.png" alt="github icone"><a href="https://github.com/Artnoobbr" target="_blank" rel="external">Github</a>
         </li>
 
         <li>
@@ -24,6 +25,7 @@
         </li>
         
         <li>
+            <img src="images/icone-steam.png" alt="icone">
             <a href="https://steamcommunity.com/id/Artnoobbr" target="_blank" rel="external">Steam</a>
         </li>
     </ul>
