--- a/modulo-02/d010/index.html
+++ b/modulo-02/d010/index.html
@@ -54,7 +54,7 @@
                 </p>
             </article>
 
-            
+
             <article>
                 <h2 class="h2_article">  
                     Surge um novo mascote
@@ -127,7 +127,7 @@
         </section>
     </main>
     <footer>
-        <p>Site criado por Gustavo Guanabara para o CursoemVideo.</p>
+        <p>Site criado por <a href="#">Gustavo Guanabara</a> para o <a href="#">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
